k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opensearch-alert-ingress
  namespace: k8s-app
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - opensearch-alert.tianxiang.love
      secretName: opensearch-alert-tls-secret
  rules:
  - host: opensearch-alert.tianxiang.love
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: opensearch-alert
            port:
              number: 8080
